# MMUN2-Bot

./: .gitignore  Countries  README.md  main.py  pyproject.toml  sqlite.db  sqlite.db-journal
src/: main.py
src/Commands/: contact.py  countryIntel.py  functions.py  help.py
src/pickle/: Countries
